Fix prom stub
